refactor: 탐색 방향 전환을 기물에서 보드로 이동하는 리팩토링 (for문을 보드로 추출)